<resources>
    <string name="app_name">Project1-CST483-Group5</string>
    <string name="app_title">APPA APP</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="yip_yip">Yip Yip</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="favorite_pets">Favorite Pets!</string>
    <string name="favorites">Favorites</string>
    <string name="refresh">Refresh</string>
    <string-array name="type_array">
        <item>Any</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Horse</item>
        <item>Bird</item>
    </string-array>
    <string-array name="age_array">
        <item>Any</item>
        <item>Baby</item>
        <item>Young</item>
        <item>Adult</item>
        <item>Senior</item>
    </string-array>
    <string-array name="gender_array">
        <item>Any</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
</resources>